alignment fix

--- a/src/styles/Market.css
+++ b/src/styles/Market.css
@@ -58,3 +58,11 @@
     padding-right: 0px !important;
     padding-left: 0px !important;
 }
+
+.margin-left-tools{
+    margin-left: 20px;
+    margin-top: 16px;
+    margin-left: 67px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
